# Aura

./: .gitignore  CMakeLists.txt  README.md  requirements.txt
cv/src/: calibrate_photos.py  face_mesh_app.py  pipeline.py  zmq_listener.py
docs/: PG_WETI_DPP_wer. 1.10.docx  PG_WETI_DTP_wer. 1.10.docx  presentation.tex
src/: main.cpp  objLoader.cpp  objLoader.h
src/cv/: face_mesh_app.py
uma_renderer/Assets/Scripts/: UDPReceiver.cs
unity_renderer/Assets/Scenes/: SampleScene.unity
unity_renderer/Assets/Scripts/: DirectBoneController.cs  NetworkManagerUDP.cs
unity_renderer/Assets/Settings/: DefaultVolumeProfile.asset  Mobile_RPAsset.asset  PC_RPAsset.asset  PC_Renderer.asset  SampleSceneProfile.asset  UniversalRenderPipelineGlobalSettings.asset
unity_renderer/ProjectSettings/: ProjectSettings.asset  TagManager.asset
